[package]
name = "commandeer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tokio"] }
futures-util = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full", "sync"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["io"] }
tower-http = { version = "0.5.2", features = ["fs"] }
